asgn3/92-uncomment.oc.err
92-uncomment.oc:1:1: error: unterminated comment
 /*
 ^
oc: pclose failed: /usr/bin/cpp -nostdinc 92-uncomment.oc: Exit 1
